# zeus

./: .coveragerc  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements-hermes-ci.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: API.md  ARCHITECTURE.md  AUDIT.md  COMPATIBILITY.md  FRESH_VPS_TEST.md  OPERATIONS.md  REAL_HERMES_VERIFICATION.md  RECONCILE.md  RELEASE.md  REPO_GENERATION.md  ROADMAP.md  SYSTEMD.md  TEMPLATE_AUTHORING.md  openapi.json
docs/assets/: demo.cast
scripts/: check_verified_release_ref.py  check_version_tag.py  fresh_vps_verify.sh  generate_checksums.sh  repo_check.sh  start.sh  stop.sh  test.sh  verify_real_hermes.sh  wheel_smoke.sh
systemd/: zeus-api.service  zeus-reconcile.service  zeus-reconcile.timer
templates/: coding-bot.toml  deepseek-coding-bot.toml  docs-writer-bot.toml  gateway-operator.toml  log-triage-bot.toml  research-bot.toml  support-gateway.toml
tests/: test_api.py  test_api_errors.py  test_api_logging.py  test_api_request.py  test_api_server.py  test_audit_cli.py  test_audit_config.py  test_audit_container.py  test_audit_docker_broker.py  test_audit_docker_isolation.py  test_audit_doctor.py  test_audit_git_integration.py  test_audit_process.py  test_audit_profile.py  test_audit_report.py  test_audit_runner.py  test_audit_service.py  test_audit_store.py  test_audit_workspace.py  test_bot_lifecycle_store.py  test_crash_recovery.py  test_fake_hermes_integration.py  test_fleet_reconciliation.py  test_fresh_vps_script.py  test_gateway_marker.py  test_gateway_runtime.py  test_idempotency.py  test_idempotency_store.py  test_intent_recovery.py  test_lifecycle_ledger.py  test_lifecycle_lock.py  test_lifecycle_regressions.py  test_pinned_hermes_audit_broker.py  test_private_io.py  test_process_identity.py  test_profile_manager.py  test_rate_limit.py  test_readiness.py  test_reconcile_store.py  test_renderer_state.py  (+7 more)
tests/fixtures/: api_process_harness.py  fake_slow_hermes.py
zeus/: __init__.py  api.py  api_errors.py  api_logging.py  api_request.py  api_server.py  audit.py  audit_config.py  audit_container.py  audit_docker_broker.py  audit_docker_broker_main.py  audit_doctor.py  audit_models.py  audit_process.py  audit_profile.py  audit_report.py  audit_runner.py  audit_store.py  audit_workspace.py  bot_lifecycle_store.py  cli.py  config.py  doctor.py  envfile.py  errors.py  fs_utils.py  gateway_launcher.py  gateway_marker.py  gateway_runtime.py  hermes_adapter.py  idempotency.py  idempotency_store.py  intent_recovery.py  lifecycle.py  logging_utils.py  models.py  private_io.py  process_identity.py  process_lock.py  profile_manager.py  (+12 more)
zeus/bundled_skills/: __init__.py
zeus/bundled_skills/audit/: SKILL.md  __init__.py
zeus/bundled_templates/: __init__.py  deepseek-coding-bot.toml  log-triage-bot.toml  research-bot.toml  support-gateway.toml
zeus/demo/: __init__.py  fake_hermes.py
