[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zeus-hermes-orchestrator"
version = "0.1.0"
description = "Workspace-local orchestrator for many Hermes Agent bots"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "BrainX" },
]
maintainers = [
  { name = "BrainX" },
]
keywords = ["hermes-agent", "orchestration", "agents", "automation", "bots"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Systems Administration",
]

[project.urls]
Maintainer = "https://github.com/brainx"

[project.scripts]
zeus = "zeus.cli:main"

[tool.setuptools.packages.find]
include = ["zeus*"]
